# vibecheck

./: .gitignore  README.md  action.yml  notes.md  package.json  pnpm-lock.yaml  repro-trace.txt  trace-local-preview.txt
.chainlink/.cache/: last-edit-time
.claude/: settings.local.json
.github/workflows/: ci.yml  self-test.yml  vibecheck.yml
docs/: install.html
scripts/: analyze.ts  fingerprints.ts  sarif-to-issues.ts  types.ts  verbose-analyze.ts
src/ado/: ado-api.ts  findings-to-workitems.ts
src/core/: analyze.ts  repo-detect.ts  types.ts
src/github/: sarif-to-issues.ts  workflow-generator.ts
src/output/: build-llm-json.ts  workitem-formatter.ts
src/parsers/: index.ts  kotlin.ts  python.ts  security.ts
src/scoring/: hierarchy.ts  index.ts  tool-mappers.ts
src/tools/: autofix-runner.ts  tool-registry.ts  tool-runners.ts
src/tools/runners/: java.ts  kotlin.ts  python.ts  rust.ts  typescript.ts
src/utils/: cli-utils.ts  finding-processing.ts  fingerprints.ts  parser-utils.ts  shared.ts
test-fixtures/: Cargo.toml  README.md  bandit-issues.py  deny.toml  eslint-issues.ts  mypy-issues.py  ruff-issues.py  rust-issues.rs  typescript-errors.ts
tests/: analyze-entrypoint.test.ts  finding-processing.test.ts  issues-config.test.ts  local-preview.ts  scoring.test.ts
